<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_data"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_name" />

            <EditText
                android:id="@+id/lengthEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_hose"
                android:inputType="number" />

            <EditText
                android:id="@+id/commentEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details_comment" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/statusHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_current"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="?attr/colorPrimary"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/statusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_status"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/currentSpeedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_speed"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/timeFinishText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_endtime"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/workTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_worktime"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/extensionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_extension"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/signalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_signal"
                android:textSize="16sp"
                android:padding="4dp"/>

            <TextView
                android:id="@+id/batteryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_battery"
                android:textSize="16sp"
                android:padding="4dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_save"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="#4CAF50"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnAdvancedSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details_advance"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="?attr/colorPrimary"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvLastUpdate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/details_update"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="0dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvNextUpdate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/details_next"
                    android:textSize="12sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>