<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hh"/>
        <NumberPicker
            android:id="@+id/npHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mm"/>
        <NumberPicker
            android:id="@+id/npMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colon"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ss"/>
        <NumberPicker
            android:id="@+id/npSeconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>